fix: mobile nav misalignment (#62)

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -204,7 +204,7 @@ header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
   display: block;
   position: absolute;
   top: 55px;
-  left: 3px;
+  left: 25px;
   min-width: 160px;
   background-color: var(--header-background-color);
   white-space: initial;
@@ -276,6 +276,10 @@ header nav .nav-sections > ul > li > ul > li {
 
   header nav .nav-sections>ul>li:not(.nav-drop) a {
     text-decoration: none;
+  }
+
+  header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
+    left: 3px;
   }
 
   header nav .nav-sections>ul>li>a::before {
